--- a/public/main.html
+++ b/public/main.html
@@ -227,5 +227,7 @@
             </div>
         </div>
         <!-- end articles  -->
+        <link rel="stylesheet" href="css/libs.min.css">
+        <link rel="stylesheet" href="css/main.min.css">
 
         
