--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
                     <div class="terms-body">
                        <h2 class="terms-body__tittle tittle-section">
                            <span><img src="http://res.cloudinary.com/alexcloudi/image/upload/v1528616096/grape/icon/six_gran.png" alt="six face"></span>
-                           <a href="#" ng-cloak ng-click="tagClick(termin.name, termin.id)">{{termin.name}}</a>
+                           <a href="#" ng-cloak="Термины" ng-click="tagClick(termin.name, termin.id)">{{termin.name}}</a>
                            <span><img src="http://res.cloudinary.com/alexcloudi/image/upload/v1528616096/grape/icon/six_gran.png" alt="six face"></span>
                        </h2>
                        <ul class="terms-body__items terms-items">                
