--- a/public/main.html
+++ b/public/main.html
@@ -228,5 +228,6 @@
         </div>
         <!-- end articles  -->
 
-
+        <script src="js/libs.js"></script>
+        <script src="js/main.js"></script>
         
