--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,8 @@
                 <p>2018</p>
             </div>        
         </footer>
-
+        <script src="js/libs.js"></script>
+        <script src="js/main.js"></script>
         <script src="js/angular.min.js"></script>
         <script src="js/grapeApp.js"></script>
     </main>
