--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
             <div class="header-body">
                 <a href="/" class="header-body__logo" ng-click="startPage()"><img src="http://res.cloudinary.com/alexcloudi/image/upload/v1528617026/grape/logo/logo_name.png" alt="grape"></a> 
                 <div class="header-body__find header-find">
-                    <form action="" class="header-find__form header-form"> 
+                    <form action="" class="header-find__form header-form" ng-submit="find()"> 
                         <input type="text" class="header-form__input">
                         <a href="#" class="header-form__button" ng-click="find()">
                             <img src="http://res.cloudinary.com/alexcloudi/image/upload/v1528616096/grape/icon/find.png" alt="find">
