--- a/public/article.html
+++ b/public/article.html
@@ -1,7 +1,7 @@
 <div class="article">
     <div class="article-body">
         <div class="article-body__icon article-icon">
-            <img src="http://res.cloudinary.com/alexcloudi/image/upload/v1528616718/grape/letter_icon/{{artLetter}}.png" alt="{{artLetter}}">
+            <img src="http://res.cloudinary.com/alexcloudi/image/upload/fl_progressive:semi/v1528616718/grape/letter_icon/{{artLetter}}.png" alt="{{artLetter}}">
         </div>
         <div class="article-body__content article-content">
             <div class="container">
