--- a/public/letter.html
+++ b/public/letter.html
@@ -3,7 +3,7 @@
             <div class="tag-body">
                 <div class="tag-body__name tag-name">      
                     <div class="tag-name__img">
-                        <img src="http://res.cloudinary.com/alexcloudi/image/upload/v1528616718/grape/letter_icon/{{letterAct}}.png" alt="{{letterAct}}">
+                        <img src="http://res.cloudinary.com/alexcloudi/image/upload/fl_progressive:semi/v1528616718/grape/letter_icon/{{letterAct}}.png" alt="{{letterAct}}">
                     </div>
                 </div>
                 <div class="tag-body__articles">
