--- a/public/main.html
+++ b/public/main.html
@@ -4,14 +4,14 @@
             <div class="container">
                 <div class="terms-body">
                    <h2 class="terms-body__tittle tittle-section">
-                       <span><img src="http://res.cloudinary.com/alexcloudi/image/upload/v1528616096/grape/icon/six_gran.png" alt="six face"></span>
+                       <span><img src="http://res.cloudinary.com/alexcloudi/image/upload/fl_progressive:semi/v1528616096/grape/icon/six_gran.png" alt="six face"></span>
                        <a href="#" ng-click="tagClick(termin.name, termin.id)">{{termin.name}}</a>
-                       <span><img src="http://res.cloudinary.com/alexcloudi/image/upload/v1528616096/grape/icon/six_gran.png" alt="six face"></span>
+                       <span><img src="http://res.cloudinary.com/alexcloudi/image/upload/fl_progressive:semi/v1528616096/grape/icon/six_gran.png" alt="six face"></span>
                    </h2>
                    <ul class="terms-body__items terms-items">                
                        <li class="terms-items__fun terms-fun">
                            <a href="#" ng-click="articleClick(termStart[0].name, termStart[0].id)">
-                               <img src="http://res.cloudinary.com/alexcloudi/image/upload/v1528616718/grape/letter_icon/А.png" alt="grape">
+                               <img src="http://res.cloudinary.com/alexcloudi/image/upload/fl_progressive:semi/v1528616718/grape/letter_icon/А.png" alt="grape">
                                <h3 class="terms-fun__tittle">{{termStart[0].name}}</h3>
                                <div class="terms-fun__text">
                                    <p>
@@ -25,7 +25,7 @@
                        </li>                               
                        <li class="terms-items__fun terms-fun">
                            <a href="#" ng-click="articleClick(termStart[1].name, termStart[1].id)">
-                               <img src="http://res.cloudinary.com/alexcloudi/image/upload/v1528616718/grape/letter_icon/О.png" alt="">
+                               <img src="http://res.cloudinary.com/alexcloudi/image/upload/fl_progressive:semi/v1528616718/grape/letter_icon/О.png" alt="">
                                <h3 class="terms-fun__tittle">{{termStart[1].name}}</h3>
                                <div class="terms-fun__text">
                                        <p>
@@ -39,7 +39,7 @@
                        </li>
                        <li class="terms-items__fun terms-fun">
                           <a href="#" ng-click="articleClick(termStart[2].name, termStart[2].id)">
-                               <img src="http://res.cloudinary.com/alexcloudi/image/upload/v1528616718/grape/letter_icon/П.png" alt="">
+                               <img src="http://res.cloudinary.com/alexcloudi/image/upload/fl_progressive:semi/v1528616718/grape/letter_icon/П.png" alt="">
                                <h3 class="terms-fun__tittle">{{termStart[2].name}}</h3>
                                <div class="terms-fun__text">
                                    <p>
@@ -61,15 +61,15 @@
             <div class="container">
                 <div class="sorts-body">
                     <h2 class="sorts-body__tittle tittle-section">
-                        <span><img src="http://res.cloudinary.com/alexcloudi/image/upload/v1528616096/grape/icon/six_gran.png" alt="six face"></span>
+                        <span><img src="http://res.cloudinary.com/alexcloudi/image/upload/fl_progressive:semi/v1528616096/grape/icon/six_gran.png" alt="six face"></span>
                         <a href="#" ng-click="tagClick(grades.name, grades.id)">{{grades.name}}</a>
-                        <span><img src="http://res.cloudinary.com/alexcloudi/image/upload/v1528616096/grape/icon/six_gran.png" alt="six face"></span>
+                        <span><img src="http://res.cloudinary.com/alexcloudi/image/upload/fl_progressive:semi/v1528616096/grape/icon/six_gran.png" alt="six face"></span>
                     </h2>
                     <div class="sorts-body__items sorts-items">
                         <section class="sorts-items__item sorts-item">
                             <a href="#" class="sorts-item__link sorts-link" ng-click="articleClick(sortStart[0].name, sortStart[0].id)">
                                 <div class="sorts-link__img">
-                                    <img src="http://res.cloudinary.com/alexcloudi/image/upload/v1528617338/grape/sorts/flora1.jpg" alt="">
+                                    <img src="http://res.cloudinary.com/alexcloudi/image/upload/fl_progressive:semi/v1528617338/grape/sorts/flora1.jpg" alt="">
                                 </div>                        
                                 <h3 class="sorts-link__tittle">{{sortStart[0].name}}</h3>
                                 <p class="sorts-link__desc">СВЕРХРАННИЙ</p>
@@ -78,7 +78,7 @@
                         <section class="sorts-items__item sorts-item">
                             <a href="#" class="sorts-item__link sorts-link" ng-click="articleClick(sortStart[1].name, sortStart[1].id)">
                                 <div class="sorts-link__img">
-                                    <img src="http://res.cloudinary.com/alexcloudi/image/upload/v1528617338/grape/sorts/preobrgenie3.jpg" alt="">                            
+                                    <img src="http://res.cloudinary.com/alexcloudi/image/upload/fl_progressive:semi/v1528617338/grape/sorts/preobrgenie3.jpg" alt="">                            
                                 </div>
                                 <h3 class="sorts-link__tittle">{{sortStart[1].name}}</h3>
                                 <p class="sorts-link__desc">СВЕРХРАННИЙ</p>
@@ -87,7 +87,7 @@
                         <section class="sorts-items__item sorts-item">
                             <a href="#" class="sorts-item__link sorts-link" ng-click="articleClick(sortStart[2].name, sortStart[2].id)">
                                 <div class="sorts-link__img">                                
-                                    <img src="http://res.cloudinary.com/alexcloudi/image/upload/v1528617338/grape/sorts/slavyta1.JPG" alt="">
+                                    <img src="http://res.cloudinary.com/alexcloudi/image/upload/fl_progressive:semi/v1528617338/grape/sorts/slavyta1.JPG" alt="">
                                 </div>
                                 <h3 class="sorts-link__tittle">{{sortStart[2].name}}</h3>
                                 <p class="sorts-link__desc">РАННЕ-СРЕДНИЙ</p>
@@ -108,15 +108,15 @@
             <div class="container">
                 <div class="person-body">
                     <h2 class="person-body__tittle tittle-section">
-                        <span><img src="http://res.cloudinary.com/alexcloudi/image/upload/v1528616096/grape/icon/six_gran.png" alt="six face"></span>
+                        <span><img src="http://res.cloudinary.com/alexcloudi/image/upload/fl_progressive:semi/v1528616096/grape/icon/six_gran.png" alt="six face"></span>
                         <a href="#" ng-click="tagClick(personality.name, personality.id)">{{personality.name}}</a>
-                        <span><img src="http://res.cloudinary.com/alexcloudi/image/upload/v1528616096/grape/icon/six_gran.png" alt="six face"></span>
+                        <span><img src="http://res.cloudinary.com/alexcloudi/image/upload/fl_progressive:semi/v1528616096/grape/icon/six_gran.png" alt="six face"></span>
                     </h2>
                     <div class="person-body__items person-items">
                         <section class="person-items__fun person-fun">
                             <a href="#" ng-click="articleClick(personStart[0].name, personStart[0].id)">
                                 <div class="person-fun__img">
-                                    <img src="http://res.cloudinary.com/alexcloudi/image/upload/v1528617148/grape/person/Авакян.jpg" alt="АВАКЯН Борис Петрович">
+                                    <img src="http://res.cloudinary.com/alexcloudi/image/upload/fl_progressive:semi/v1528617148/grape/person/Авакян.jpg" alt="АВАКЯН Борис Петрович">
                                 </div>
                                 <div class="person-fun__sub person-sub">
                                     <span class="person-sub__name">{{personStart[0].name}}</span>
@@ -127,7 +127,7 @@
                         <section class="person-items__fun person-fun">
                             <a href="#" ng-click="articleClick(personStart[1].name, personStart[1].id)">
                                 <div class="person-fun__img">
-                                    <img src="http://res.cloudinary.com/alexcloudi/image/upload/v1528617148/grape/person/Skurihin.jpg" alt="СКУРИХИН Игорь Михайлович">
+                                    <img src="http://res.cloudinary.com/alexcloudi/image/upload/fl_progressive:semi/v1528617148/grape/person/Skurihin.jpg" alt="СКУРИХИН Игорь Михайлович">
                                 </div>
                                 <div class="person-fun__sub person-sub">
                                     <span class="person-sub__name">{{personStart[1].name}}</span>
@@ -138,7 +138,7 @@
                         <section class="person-items__fun person-fun">
                             <a href="#" ng-click="articleClick(personStart[2].name, personStart[2].id)">
                                 <div class="person-fun__img">
-                                    <img src="http://res.cloudinary.com/alexcloudi/image/upload/v1528617148/grape/person/Александр_Негруль.jpg" alt="Александр Михайлович Негруль">
+                                    <img src="http://res.cloudinary.com/alexcloudi/image/upload/fl_progressive:semi/v1528617148/grape/person/Александр_Негруль.jpg" alt="Александр Михайлович Негруль">
                                 </div>
                                 <div class="person-fun__sub person-sub">
                                     <span class="person-sub__name">{{personStart[2].name}}</span>
@@ -156,25 +156,25 @@
             <div class="wrapper">
                 <div class="articles-body">
                     <h2 class="articles-body__tittle tittle-section">
-                        <span><img src="http://res.cloudinary.com/alexcloudi/image/upload/v1528616096/grape/icon/six_gran.png" alt="six face"></span>
+                        <span><img src="http://res.cloudinary.com/alexcloudi/image/upload/fl_progressive:semi/v1528616096/grape/icon/six_gran.png" alt="six face"></span>
                         <a href="#">Статьи</a>
-                        <span><img src="http://res.cloudinary.com/alexcloudi/image/upload/v1528616096/grape/icon/six_gran.png" alt="six face"></span>
+                        <span><img src="http://res.cloudinary.com/alexcloudi/image/upload/fl_progressive:semi/v1528616096/grape/icon/six_gran.png" alt="six face"></span>
                     </h2>
                     <div class="articles-body__slideshow slideshow">
                         <div class="slideshow-left">
                             <div class="slideshow-left__item left-item">
                                 <a href="#" class="left-item__icon left-icon" ng-click="letterClick('А')">
-                                    <img src="http://res.cloudinary.com/alexcloudi/image/upload/v1528616718/grape/letter_icon/А.png" alt="А">
+                                    <img src="http://res.cloudinary.com/alexcloudi/image/upload/fl_progressive:semi/v1528616718/grape/letter_icon/А.png" alt="А">
                                 </a>
                             </div>
                             <div class="slideshow-left__item left-item">
                                 <a href="#" class="left-item__icon left-icon" ng-click="letterClick('Б')">
-                                    <img src="http://res.cloudinary.com/alexcloudi/image/upload/v1528616718/grape/letter_icon/Б.png" alt="Б">
+                                    <img src="http://res.cloudinary.com/alexcloudi/image/upload/fl_progressive:semi/v1528616718/grape/letter_icon/Б.png" alt="Б">
                                 </a> 
                             </div>
                             <div class="slideshow-left__item left-item">                        
                                 <a href="#" class="left-item__icon left-icon" ng-click="letterClick('В')">
-                                    <img src="http://res.cloudinary.com/alexcloudi/image/upload/v1528616718/grape/letter_icon/В.png" alt="В">
+                                    <img src="http://res.cloudinary.com/alexcloudi/image/upload/fl_progressive:semi/v1528616718/grape/letter_icon/В.png" alt="В">
                                 </a> 
                             </div>
                         </div>
@@ -213,12 +213,12 @@
                         <div class="slideshow-control">
                             <div class="slideshow-control__top control-top">
                                 <div class="control-top__icon">
-                                    <img src="http://res.cloudinary.com/alexcloudi/image/upload/v1528616096/grape/icon/up.png" alt="UP">
+                                    <img src="http://res.cloudinary.com/alexcloudi/image/upload/fl_progressive:semi/v1528616096/grape/icon/up.png" alt="UP">
                                 </div>
                             </div>
                             <div class="slideshow-control__bottom control-bottom">
                                 <div class="control-top__icon">
-                                    <img src="http://res.cloudinary.com/alexcloudi/image/upload/v1528616096/grape/icon/down.png" alt="Down">
+                                    <img src="http://res.cloudinary.com/alexcloudi/image/upload/fl_progressive:semi/v1528616096/grape/icon/down.png" alt="Down">
                                 </div>                        
                             </div>
                         </div>
